      java -jar logstash.jar kibana
  - elasticsearch version 0.90.0 is included.
  - grok now defaults 'singles' to true, meaning captured fields are
    stored as single values in most cases instead of the old behavior
    of being captured as an array of values.
  - Many deprecated features have been removed.
    TODO(sissel): Document what these were.

  ## inputs
  - bugfix: gelf: work around gelf parser errors (#476, patch by Chris McCoy)

  ## filters
  - feature: grok: 'singles' now defaults to true.
  - bugfix: grep: allow repeating a field in the hash config (LOGSTASH-919)
  - feature: specify timezone in date filter (#470, patch by Philippe Weber)
  - feature: grok setting 'overwrite' now lets you overwrite fields instead
    of appending to them.
  - feature: the useragent filter now defaults to writing results to the top
    level of the event instead of "ua"

  ## outputs
  - feature: irc: add messages_per_second tunable (LOGSTASH-962)
  - bugfix: emails: restored initial really useful documentation
  - improvement: emails: allow @message, @source, @... in match (LOGSTASH-826,
    LOGSTASH-823) 

1.1.13 (May 28, 2013)
  ## general
  - fixed bug in static file serving for logstash web (LOGSTASH-1067)

  ## outputs
  - feature: irc: add messages_per_second tunable (LOGSTASH-962)

1.1.12 (May 7, 2013)
  ## filters
  - bugfix: useragent filter now works correctly with the built-in regexes.yaml
  - bugfix: mail output with smtp now works again

1.1.11 (May 7, 2013)
  ## general
  - This release is primarily a bugfix release for bugs introduced by the
    previous release.
  - Support for Rubinius and MRI exists once again.

  ## inputs
  - bugfix: lumberjack now respects field data again (lumberjack --field foo=bar)
  - bugfix: rabbitmq was broken by the previous release (LOGSTASH-1003,
    LOGSTASH-1038; Patch by Jason Koppe)
  - bugfix: relp: allow multiple client socket connections to RELP input
    (LOGSTASH-707, LOGSTASH-736, LOGSTASH-921)
